--- a/Clients/HermesSpa/ClientApp/app/rail/search.component.html
+++ b/Clients/HermesSpa/ClientApp/app/rail/search.component.html
@@ -1,18 +1,18 @@
 <form #searchForm="ngForm" (submit)="search()" class="col-md-6">
     <div class="form-group">
         <label>Origin station</label>
-        <input type="text" [(ngModel)]="request.from" name="origin" class="form-control" />
+        <input type="text" [(ngModel)]="request.from" required name="origin" class="form-control" />
     </div>
     <div class="form-group">
         <label>Destination station</label>
-        <input type="text" [(ngModel)]="request.to" name="destination" class="form-control" />
+        <input type="text" [(ngModel)]="request.to" required name="destination" class="form-control" />
     </div>
     <div class="form-group">
         <label>Depart date</label>
-        <input type="date" [(ngModel)]="request.departDate" name="departDate" class="form-control" />
+        <input type="date" [(ngModel)]="request.departDate" required name="departDate" class="form-control" />
     </div>
 
     <div>
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" [disabled]="searchForm.invalid" class="btn btn-primary">Search</button>
     </div>
 </form>
