--- a/Clients/HermesSpa/ClientApp/app/rail/cars.component.html
+++ b/Clients/HermesSpa/ClientApp/app/rail/cars.component.html
@@ -35,7 +35,7 @@
             </td>
             <td>
                 <button class="btn btn-primary btn-sm" (click)="select(car.optionRef)">
-                    Выбрать
+                    Select
                 </button>
             </td>
         </tr>
