added ErrorComponent and it's activation when data loading fails

--- a/Clients/HermesSpa/ClientApp/app/rail/cars.component.html
+++ b/Clients/HermesSpa/ClientApp/app/rail/cars.component.html
@@ -1,6 +1,8 @@
-<spinner [active]="!result"></spinner>
+<spinner [active]="!result && !error"></spinner>
 
-<table *ngIf="result" class="table table-hover">
+<error [active]="error"></error>
+
+<table *ngIf="result && !error" class="table table-hover">
     <thead>
         <tr>
             <th>Car</th>
