--- a/Clients/HermesSpa/ClientApp/src/app/rail/trains.component.html
+++ b/Clients/HermesSpa/ClientApp/src/app/rail/trains.component.html
@@ -1,8 +1,6 @@
-<spinner [active]="!result && !error"></spinner>
+<spinner [active]="!result"></spinner>
 
-<error [active]="error"></error>
-
-<table *ngIf="result && !error" class="table table-hover">
+<table *ngIf="result" class="table table-hover">
     <thead>
         <tr>
             <th>Train</th>
